# FastDeploy

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  README_CN.md  README_EN.md  build.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dcu.txt  requirements_iluvatar.txt  requirements_metaxgpu.txt  setup.py  sitemap.xml
.github/: copilot-instructions.md  pull_request_template.md
benchmark/: index.html
benchmarks/: README.md  backend_request_func.py  benchmark_dataset.py  benchmark_mtp.py  benchmark_serving.py  benchmark_utils.py  quick_benchmark.py  requirements.txt
best_practices/: index.html
cli/: index.html
custom_ops/: 0001-DeepGEMM-95e81b3.patch  MANIFEST.in  auto_gen_fp8_fp8_block_gemm_fused_kernels_sm90.py  auto_gen_fp8_fp8_dual_gemm_fused_kernels.py  auto_gen_fp8_fp8_gemm_fused_kernels.py  auto_gen_visitor_fp8_gemm_fused_kernels.py  setup_ops.py  setup_ops_base.py  setup_ops_cpu.py
dockerfiles/: Dockerfile.gpu  Dockerfile.xpu
docs/: benchmark.md  code_guide.md  index.md  metrics.md  offline_inference.md  parameters.md  requirements.txt  serving.md  supported_models.md
fastdeploy/: __init__.py  collect_env.py  config.py  download_model.py  (+8 more)
fastdeploy/cache_manager/transfer_factory/kvcache_transfer/: CMakeLists.txt  README.md  README_CN.md
fastdeploy/cache_manager/transfer_factory/kvcache_transfer/include/: kvcache_connection.h  kvcache_rdma.h  log.h  util.h
fastdeploy/cache_manager/transfer_factory/kvcache_transfer/src/: kvcache_connection.cpp  kvcache_rdma.cpp  log.cpp  pybind.cpp
(+1546 files in other folders)
